--- a/src/components/search/SkillSearch/scss/skillSearch.scss
+++ b/src/components/search/SkillSearch/scss/skillSearch.scss
@@ -3,7 +3,7 @@
 .skill-search {
 	background: #eaeaea;
 	min-width: 345px;
-	max-height: 625px;
+	max-height: 665px;
 	border-radius: 20px;
 
 	.search-field-div {
